2008-11-12  kitone  <kitone@gna.org>

	* prepare-po.sh:
	Add desktop.in files.

2008-11-12  kitone  <kitone@gna.org>

	* acinclude.m4:
	* configure.in:
	Add m4/intltool_se_plugin.m4. (Patch: Luboš Staněk)

2008-11-12  kitone  <kitone@gna.org>

	* configure.in:
	* share/Makefile.am:
	* src/Makefile.am:
	Clean the installation directory. (Patch: Luboš Staněk)

2008-11-11  kitone  <kitone@gna.org>

	* src/ExtensionManager.cc:
	Fix: segfault with debug-msg.

2008-11-10  kitone  <kitone@gna.org>

	* plugins/actions/configurekeyboardshortcuts/ConfigureKeyboardShortcuts.cc:
	Remove debug code.

2008-11-10  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/actions/TryToExtendToPerfect.cc:
	Remove deprecated files.

2008-11-10  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/Plugin.cc:
	* src/Plugin.h:
	* src/PluginSystem.cc:
	* src/PluginSystem.h:
	* src/gui/Application.h:
	Remove deprecated Plugin files.

2008-11-10  kitone  <kitone@gna.org>

	* configure.in:
	Fix: Change to tar-ustar. (name > 99)

2008-11-10  kitone  <kitone@gna.org>

	* plugins/actions/videoplayermanagement/VideoPlayerManagement.cc:
	* plugins/actions/viewmanager/ViewManager.cc:
	Fix: add tooltips.

2008-11-09  kitone  <kitone@gna.org>

	* plugins/actions/externalvideoplayer/ExternalVideoPlayer.cc:
	Fix: action name and add tooltip.

2008-11-09  kitone  <kitone@gna.org>

	* plugins/actions/configurekeyboardshortcuts/ConfigureKeyboardShortcuts.cc:
	Work now without menubar.xml.

2008-11-09  kitone  <kitone@gna.org>

	* src/Waveform.cc:
	* src/we/WaveformGenerator.cc:
	* src/we/WaveformRenderer.cc:
	Improvement by removing unnecessary conversion.

2008-11-08  kitone  <kitone@gna.org>

	* plugins/actions/preferences/Makefile.am:
	* plugins/actions/preferences/PreferencesPlugin.cc:
	* plugins/actions/preferences/PreviewPage.h:
	* plugins/actions/preferences/dialog-preferences.glade:
	Remove Preview (External Video Player) code/page.

2008-11-08  kitone  <kitone@gna.org>
